--- a/SchoolSpring/src/main/resources/templates/schoolClassesList.html
+++ b/SchoolSpring/src/main/resources/templates/schoolClassesList.html
@@ -18,8 +18,8 @@
 				<td><span th:text="${schoolClass.currentYear}" /></td>
 				<td><span th:text="${schoolClass.profile}" /></td>
 		        <td>
-		            <form action="DeleteSchool" method="POST">
-		            	<input type="hidden" name="schoolId" th:value="${schoolClass.id}" />
+		            <form action="DeleteSchoolClasses" method="POST">
+		            	<input type="hidden" name="schoolClassId" th:value="${schoolClass.id}" />
 		                <button type="submit">X</button>
 		            </form>
 		        </td>
