New options in schoolForm

--- a/SchoolSpring/src/main/resources/templates/schoolClassForm.html
+++ b/SchoolSpring/src/main/resources/templates/schoolClassForm.html
@@ -9,6 +9,7 @@
 	   			<form action="CreateSchoolClass" method="POST">
 					<table>
 						<tr><td>Start year:</td><td><input type="text" name="schoolClassStartYear" /></td></tr>
+						<tr><td>Current year</td><td><input type="text" name="schoolClassCurrentYear" /></td></tr>
 						<tr><td>Profil</td><td><input type="text" name="schoolClassProfile" /></td></tr>
 					</table><br/><BR/>
 					<input type="submit" value="Utwórz"/>
